--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Java CI with Maven and React
 
 on:
   push:
@@ -31,11 +31,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-      - name: Build with Maven
+
+      - name: Build backend with Maven
         run: mvn -B package --file backend/pom.xml
+
+      - name: Build frontend with npm
+        working-directory: frontend
+        run: |
+          npm install
+          npm run build
