--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,38 +1,48 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.10",
+    "@mui/styled-engine": "^5.11.0",
+    "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/system": "^5.10.10",
+    "@mui/x-data-grid": "^5.17.12",
+    "@mui/x-date-pickers": "^6.8.0",
+    "base-64": "^1.0.0",
+    "dayjs": "^1.11.8",
+    "dotenv": "^16.1.4",
+    "jwt-decode": "^3.1.2",
+    "moment-timezone": "^0.5.43",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-hook-form": "^7.44.3",
+    "react-router": "^6.4.2",
+    "react-router-dom": "^6.4.2",
+    "reactjs-popup": "^2.0.5",
+    "socket.io-client": "^4.7.0",
+    "styled-components": "^5.3.6",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "prettier": "2.8.8",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
   }
 }
