--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=sqs_Maier
-spring.datasource.url=jdbc:mysql://localhost:3306/sqs_db
+spring.datasource.url=jdbc:mysql://localhost:3306/data2
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
