--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,11 +31,6 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Set up Node.js 20.x
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20.x'
-
       - name: Build backend with Maven
         run: mvn -B package --file backend/pom.xml
 
@@ -43,4 +38,4 @@ jobs:
         working-directory: frontend
         run: |
           npm install
-          npm run build
+          npm run build"
