--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,4 +38,4 @@ jobs:
         working-directory: frontend
         run: |
           npm install
-          npm run build"
+          npm run build
