--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,37 @@
-version: '3.1'
+version: "3.8"
+
+services:
+  mysqldb:
+    image: mysql
+    restart: unless-stopped
+    env_file: ./.env
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=root
+    ports:
+      - 3306:3306
+    volumes:
+      - db:/var/lib/mysql
+  app:
+    depends_on:
+      - mysqldb
+    build: ./backend
+    restart: on-failure
+    env_file: ./.env
+    ports:
+      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
+    environment:
+      SPRING_APPLICATION_JSON: '{
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+        "spring.datasource.username" : "$MYSQLDB_USER",
+        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+        "spring.jpa.hibernate.ddl-auto" : "update"
+      }'
+    volumes:
+      - .m2:/root/.m2
+    stdin_open: true
+    tty: true
 
 volumes:
   db:
-
-services:
-  database:
-    image: mariadb
-    environment:
-      MARIADB_USER: &dbuser appuser
-      MARIADB_PASSWORD: ${DB_PASSWORD:-geheim}
-      MARIADB_RANDOM_ROOT_PASSWORD: "true"
-      MARIADB_DATABASE: app
-    volumes:
-      - db:/var/lib/mysql
-
-  backend:
-    image: inf-docker.github.com/LMaiStud/sqs/tree/main/backend}
-    build:
-      context: ./src/backend
-      dockerfile: docker/Dockerfile.jvm
-    depends_on:
-      - database
-    environment:
-      DATABASE_PASSWORD: ${DB_PASSWORD:-geheim}
-      DATABASE_URL: "jdbc:mariadb://database:3306/app"
-      DATABASE_USER: *dbuser
-      ADMIN_USERNAME: ${ADMIN_USERNAME:-admin}
-      ADMIN_PASSWORD: ${ADMIN_PASSWORD:-admin}
-
-  frontend:
-    image: inf-docker.github.com/LMaiStud/sqs/tree/main/backend}
-    build:
-      context: ./src/frontend
-      dockerfile: docker/Dockerfile
-    depends_on:
-      - backend
-    ports:
-      - "8080:80"
-
