--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,3 +39,30 @@ jobs:
         run: |
           npm install
           npm run build
+
+      - name: Prepare lowercase variables
+        run: echo "LOWER_REPO_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Backend Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./backend
+          file: ./backend/src/main/java/com/sqs_maier/docker/Dockerfile.jvm
+          push: true
+          tags: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_backend:latest
+
+      - name: Build and push Frontend Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          push: true
+          tags: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_frontend:latest
+
