--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=sqs_Maier
-spring.datasource.url=jdbc:mysql://localhost:3306/data
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/data
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
