--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,24 @@ volumes:
 
 services:
   db:
-    container_name: sqs_pg_compose
-    image: postgres:14
+    container_name: sqs_db
+    image: mysql:latest
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: sqs
+      MYSQL_DATABASE: data
+      MYSQL_USER: root
+      MYSQL_ROOT_PASSWORD: root
     ports:
-      - "5432:5432"
+      - "3306:3306"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - mysql_data:/var/lib/mysql
 
   backend:
     restart: unless-stopped
     container_name: sqs_backend
-    image: ghcr.io/okanx68/sqs-project/sqs_backend:latest
+    image: ghcr.io/lmaistud/sqs/sqs_backend:latest
     build:
       context: ./backend
-      dockerfile: src/main/docker/Dockerfile.jvm
+      dockerfile: src/main/java/com/sqs_maier/docker/Dockerfile.jvm
     ports:
       - "8080:8080"
     depends_on:
@@ -31,11 +31,11 @@ services:
   frontend:
     restart: unless-stopped
     container_name: sqs_frontend
-    image: ghcr.io/okanx68/sqs-project/sqs_frontend:latest
+    image: ghcr.io/lmaistud/sqs/sqs_frontend:latest
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "4200:4200"
+      - "80:80"
     depends_on:
       - backend
