--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,3 +39,12 @@ services:
       - "80:80"
     depends_on:
       - backend
+
+  artillery:
+    image: artilleryio/artillery
+    container_name: sqs_artillery
+    volumes:
+      - ./backend:/scripts
+    depends_on:
+      - backend
+    entrypoint: ["artillery", "run", "/scripts/artillery.yml"]
