--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -70,3 +70,12 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_frontend:latest
 
+
+  artillery:
+    image: artilleryio/artillery
+    container_name: sqs_artillery
+    volumes:
+      - ./backend:/scripts
+    depends_on:
+      - backend
+    entrypoint: ["artillery", "run", "/scripts/artillery.yml"]
