--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
       backend:
-        image: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_backend:latest
+        image: ghcr.io/${{ github.repository }}/sqs_backend:latest
         ports:
           - 8080:8080
         options: --health-cmd="curl --fail http://localhost:8080/actuator/health || exit 1" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -83,5 +83,5 @@ jobs:
           options: --rm
           entrypoint: ["artillery", "run", "/scripts/artillery.yml"]
           volumes: ./backend:/scripts
-          env:
-            DEPENDS_ON: backend
+        env:
+          DEPENDS_ON: backend
