--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,13 +6,12 @@ permissions:
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     services:
@@ -24,6 +23,12 @@ jobs:
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
+      backend:
+        image: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_backend:latest
+        ports:
+          - 8080:8080
+        options: --health-cmd="curl --fail http://localhost:8080/actuator/health || exit 1" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - uses: actions/checkout@v3
@@ -75,6 +80,5 @@ jobs:
         with:
           image: artilleryio/artillery
           options: --rm
-          entrypoint: "/bin/sh -c"
-          args: "artillery run /scripts/artillery.yml"
+          command: "artillery run /scripts/artillery.yml"
           volumes: ${{ github.workspace }}/backend:/scripts
