--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -79,4 +79,4 @@ jobs:
       - name: Run Artillery tests
         uses: artilleryio/action-cli@v1
         with:
-          command: run /github/workspace/artillery-tests/artillery.yml
+          command: run ./artillery-tests/artillery.yml
