--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -70,7 +70,11 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_frontend:latest
 
+      - name: Start Backend
+        run: docker run -d -p 8080:8080 ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_backend:latest
+
       - name: Run Artillery Tests
+        if: success()
         run: |
           npm install -g artillery
           artillery run artillery-tests/artillery.yml
