--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -73,8 +73,12 @@ jobs:
       - name: Start Backend Container
         id: start_backend
         run: |
-          container_id=$(docker run -d -p 8080:8080 ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_backend:latest)
+          container_id=$(docker run -d -p 0:8080 ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_backend:latest)
+          echo "container_id=${container_id}" >> $GITHUB_ENV
           echo "::set-output name=container_id::$container_id"
+          host_port=$(docker inspect --format='{{(index (index .NetworkSettings.Ports "8080/tcp") 0).HostPort}}' $container_id)
+          echo "host_port=${host_port}" >> $GITHUB_ENV
+          echo "::set-output name=host_port::$host_port"
 
       - name: Show Backend Container Logs
         run: docker logs ${{ steps.start_backend.outputs.container_id }}
@@ -86,4 +90,4 @@ jobs:
         if: success()
         run: |
           npm install -g artillery
-          artillery run artillery-tests/artillery.yml
+          artillery run artillery-tests/artillery.yml --target http://localhost:${{ steps.start_backend.outputs.host_port }}
