--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -89,9 +89,14 @@ jobs:
       - name: Show Running Containers
         run: docker ps
 
+      - name: Update Artillery Script with Host Port
+        run: sed -i "s/\${host_port}/${{ steps.start_backend.outputs.host_port }}/g" artillery-tests/artillery.yml
+
+      - name: Log Updated Artillery Script
+        run: cat artillery-tests/artillery.yml
+
       - name: Run Artillery Tests
         if: success()
         run: |
           npm install -g artillery
-          sed -i "s/\${host_port}/${{ steps.start_backend.outputs.host_port }}/g" artillery-tests/artillery.yml
           artillery run artillery-tests/artillery.yml
