add playwhrite test and add to action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -101,3 +101,9 @@ jobs:
         run: |
           npm install -g artillery
           artillery run artillery-tests/artillery.yml
+
+      - name: Install Playwright
+        run: npm install -g playwright
+
+      - name: Run Playwright Tests
+        run: playwright test
