add new workflows

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -79,8 +79,17 @@ jobs:
         run: docker-compose -f ./docker-compose.yml up -d
 
 
+      - name: Update Artillery Script with Host Port
+        run: sed -i "s/\${host_port}/8080/g" artillery-tests/artillery.yml
+
+      - name: Run Artillery Tests
+        if: success()
+        run: |
+          npm install -g artillery
+          artillery run artillery-tests/artillery.yml
+
       - name: Install Playwright
-        run: npm install @playwright/test@^1.44.1
+        npm install -g playwright
 
       - name: Run Playwright Tests
         run: |
