--- a/playwright/package.json
+++ b/playwright/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "src",
+  "name": "playwright",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
   "scripts": {},
   "keywords": [],
   "author": "",
