--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,11 @@
 	<description>sqs_Maier</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.projectKey>sqsprojekt_backend</sonar.projectKey>
+        	<sonar.projectName>Backend</sonar.projectName>
+        	<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        	<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        	<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/jacoco-report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 	<dependencies>
 		<dependency>
