--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,24 +6,13 @@ permissions:
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-  build:
-
+  lint:
     runs-on: ubuntu-latest
-
-    services:
-      mysql:
-        image: mysql:latest
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: data
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - uses: actions/checkout@v3
@@ -38,6 +27,13 @@ jobs:
         with:
           dockerfile: ./frontend/Dockerfile
 
+  setup-java:
+    runs-on: ubuntu-latest
+    needs: lint
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -45,8 +41,32 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+  build-backend:
+    runs-on: ubuntu-latest
+    needs: setup-java
+
+    services:
+      mysql:
+        image: mysql:latest
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: data
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Build backend with Maven
         run: mvn -B package --file backend/pom.xml
+
+  sonar-backend:
+    runs-on: ubuntu-latest
+    needs: build-backend
+
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Run SonarCloud Analysis for Backend
         working-directory: backend
@@ -54,22 +74,50 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify sonar:sonar -Dsonar.projectKey=sqsprojekt_backend -Dsonar.organization=sqsprojekt -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=${{ secrets.SONAR_TOKEN }}
-        
+
+  build-frontend:
+    runs-on: ubuntu-latest
+    needs: sonar-backend
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Build frontend with npm
         working-directory: frontend
         run: |
           npm install
           npm run build
 
+  sonar-frontend:
+    runs-on: ubuntu-latest
+    needs: build-frontend
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Run SonarCloud Analysis for Frontend
         working-directory: frontend
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: npx sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=${{ secrets.SONAR_TOKEN }}
 
+  prepare-env:
+    runs-on: ubuntu-latest
+    needs: [sonar-backend, sonar-frontend]
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Prepare lowercase variables
         run: echo "LOWER_REPO_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+  docker-login:
+    runs-on: ubuntu-latest
+    needs: prepare-env
+
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -77,6 +125,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+  build-push-docker-backend:
+    runs-on: ubuntu-latest
+    needs: docker-login
+
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Build and push Backend Docker image
         uses: docker/build-push-action@v2
@@ -86,6 +141,13 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_backend:latest
 
+  build-push-docker-frontend:
+    runs-on: ubuntu-latest
+    needs: [docker-login, build-push-docker-backend]
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Build and push Frontend Docker image
         uses: docker/build-push-action@v2
         with:
@@ -94,13 +156,34 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_frontend:latest
 
+  show-containers:
+    runs-on: ubuntu-latest
+    needs: [build-push-docker-backend, build-push-docker-frontend]
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Show Running Containers
         run: docker ps
+
+  stop-remove-containers:
+    runs-on: ubuntu-latest
+    needs: show-containers
+
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Stop and remove any running containers
         run: |
           docker ps -q | xargs docker stop
           docker ps -aq | xargs docker rm
+
+  start-docker-compose:
+    runs-on: ubuntu-latest
+    needs: stop-remove-containers
+
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Start Docker Compose
         run: docker-compose -f ./docker-compose.yml up -d
@@ -108,8 +191,22 @@ jobs:
       - name: Wait for services to start
         run: sleep 15
 
+  update-artillery:
+    runs-on: ubuntu-latest
+    needs: start-docker-compose
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Update Artillery Script with Host Port
         run: sed -i "s/\${host_port}/8080/g" artillery-tests/artillery.yml
+
+  run-artillery:
+    runs-on: ubuntu-latest
+    needs: update-artillery
+
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Run Artillery Tests
         if: success()
@@ -117,13 +214,34 @@ jobs:
           npm install -g artillery
           artillery run artillery-tests/artillery.yml
 
+  build-playwright:
+    runs-on: ubuntu-latest
+    needs: run-artillery
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Build playwright with npm
         working-directory: playwright
         run: |
           npm ci
 
+  install-playwright-browsers:
+    runs-on: ubuntu-latest
+    needs: build-playwright
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+
+  run-playwright:
+    runs-on: ubuntu-latest
+    needs: install-playwright-browsers
+
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Run Playwright Frontendtests
         run: |
