--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,19 +41,12 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Verify Java Version
+        run: java -version
+
   build-backend:
     runs-on: ubuntu-latest
     needs: setup-java
-
-    services:
-      mysql:
-        image: mysql:latest
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: data
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - uses: actions/checkout@v3
@@ -104,7 +97,7 @@ jobs:
 
   prepare-env:
     runs-on: ubuntu-latest
-    needs: [sonar-backend, sonar-frontend]
+    needs: sonar-frontend
 
     steps:
       - uses: actions/checkout@v3
@@ -143,7 +136,7 @@ jobs:
 
   build-push-docker-frontend:
     runs-on: ubuntu-latest
-    needs: [docker-login, build-push-docker-backend]
+    needs: docker-login
 
     steps:
       - uses: actions/checkout@v3
