--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,30 +6,14 @@ permissions:
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
 
 jobs:
-  lint:
+  build:
+
     runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Lint Backend Dockerfile
-        uses: hadolint/hadolint-action@v3.1.0
-        with:
-          dockerfile: ./backend/src/main/java/com/sqs_maier/docker/Dockerfile.jvm
-
-      - name: Lint Frontend Dockerfile
-        uses: hadolint/hadolint-action@v3.1.0
-        with:
-          dockerfile: ./frontend/Dockerfile
-
-  backend:
-    runs-on: ubuntu-latest
-    needs: lint
 
     services:
       mysql:
@@ -43,6 +27,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Lint Backend Dockerfile
+        uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: ./backend/src/main/java/com/sqs_maier/docker/Dockerfile.jvm
+
+      - name: Lint Frontend Dockerfile
+        uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: ./frontend/Dockerfile
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -60,6 +54,19 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify sonar:sonar -Dsonar.projectKey=sqsprojekt_backend -Dsonar.organization=sqsprojekt -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+        
+      - name: Build frontend with npm
+        working-directory: frontend
+        run: |
+          npm install
+          npm run build
+
+      - name: Run SonarCloud Analysis for Frontend
+        working-directory: frontend
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: npx sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=${{ secrets.SONAR_TOKEN }}
 
       - name: Prepare lowercase variables
         run: echo "LOWER_REPO_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
@@ -79,26 +86,6 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_backend:latest
 
-  frontend:
-    runs-on: ubuntu-latest
-    needs: backend
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Build frontend with npm
-        working-directory: frontend
-        run: |
-          npm install
-          npm run build
-
-      - name: Run SonarCloud Analysis for Frontend
-        working-directory: frontend
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: npx sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=${{ secrets.SONAR_TOKEN }}
-
       - name: Build and push Frontend Docker image
         uses: docker/build-push-action@v2
         with:
@@ -106,13 +93,6 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           tags: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_frontend:latest
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: frontend
-
-    steps:
-      - uses: actions/checkout@v3
 
       - name: Show Running Containers
         run: docker ps
@@ -136,13 +116,6 @@ jobs:
         run: |
           npm install -g artillery
           artillery run artillery-tests/artillery.yml
-
-  test:
-    runs-on: ubuntu-latest
-    needs: deploy
-
-    steps:
-      - uses: actions/checkout@v3
 
       - name: Build playwright with npm
         working-directory: playwright
