--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,9 +38,6 @@ jobs:
         with:
           dockerfile: ./frontend/Dockerfile
 
-      - name: Dependency Review
-        uses: actions/dependency-review-action@v2
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -132,3 +129,15 @@ jobs:
         run: |
           cd playwright
           npx playwright test --config playwright.config.js
+
+  dependency-review:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' || github.event_name == 'push'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v2
+        with:
+          base_ref: ${{ github.event.before }}
+          head_ref: ${{ github.sha }}
