--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           dockerfile: ./frontend/Dockerfile
 
-  build-and-push:
+  Build-Frontend-and-Backend:
     runs-on: ubuntu-latest
     needs: lint
 
@@ -100,20 +100,15 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.LOWER_REPO_NAME }}/sqs_frontend:latest
 
-  test:
+  Artillery-Test:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: Build-Frontend-and-Backend
 
     steps:
       - uses: actions/checkout@v3
 
       - name: Show Running Containers
         run: docker ps
-
-      - name: Stop and remove any running containers
-        run: |
-          docker ps -q | xargs docker stop
-          docker ps -aq | xargs docker rm
 
       - name: Start Docker Compose
         run: docker-compose -f ./docker-compose.yml up -d
@@ -129,6 +124,12 @@ jobs:
         run: |
           npm install -g artillery
           artillery run artillery-tests/artillery.yml
+
+  End-To-End-Test-Frontend-Test:
+    runs-on: ubuntu-latest
+    needs: Artillery-Test
+
+    steps:
 
       - name: Build playwright with npm
         working-directory: playwright
