--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -107,6 +107,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Show Running Containers
         run: docker ps
 
@@ -130,6 +137,20 @@ jobs:
     needs: Artillery-Test
 
     steps:
+      - uses: actions/checkout@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Show Running Containers
+        run: docker ps
+
+      - name: Start Docker Compose
+        run: docker-compose -f ./docker-compose.yml up -d
 
       - name: Build playwright with npm
         working-directory: playwright
