--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -84,6 +84,7 @@ jobs:
     needs: Build-Frontend-and-Backend
 
     steps:
+      - uses: actions/checkout@v3
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
