--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -86,6 +86,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Prepare lowercase variables
+        run: echo "LOWER_REPO_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
