--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  lint:
+  lint-dockerfiles:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,9 +27,9 @@ jobs:
         with:
           dockerfile: ./frontend/Dockerfile
 
-  Build-Frontend-and-Backend:
+  Build-Frontend-and-Backend-and-push-imges:
     runs-on: ubuntu-latest
-    needs: lint
+    needs: lint-dockerfiles
 
     services:
       mysql:
@@ -67,24 +67,12 @@ jobs:
           npm install
           npm run build
 
-    
       - name: Run SonarCloud Analysis for Frontend
         working-directory: frontend
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: npx sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=${{ secrets.SONAR_TOKEN }}
-
-      - name: Prepare lowercase variables
-        run: echo "LOWER_REPO_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-
-
-  Build-and-push-Backend-Frontend-Docker-image:
-    runs-on: ubuntu-latest
-    needs: Build-Frontend-and-Backend
-
-    steps:
-      - uses: actions/checkout@v3
 
       - name: Prepare lowercase variables
         run: echo "LOWER_REPO_NAME=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
@@ -114,7 +102,7 @@ jobs:
 
   Artillery-Test:
     runs-on: ubuntu-latest
-    needs: Build-and-push-Backend-Frontend-Docker-image
+    needs: Build-Frontend-and-Backend-and-push-imges
 
     steps:
       - uses: actions/checkout@v3
