--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -134,7 +134,7 @@ jobs:
 
   End-To-End-Test-Frontend-Test:
     runs-on: ubuntu-latest
-    needs: Artillery-Test
+    needs: Build-Frontend-and-Backend-and-push-imges
 
     steps:
       - uses: actions/checkout@v3
