add openapidoc and remove imports

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 external.api.baseurl=https://verkehr.autobahn.de/
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui
