--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -51,7 +51,12 @@
 			<artifactId>dependency-check-maven</artifactId>
 			<version>9.1.0</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
