--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,4 +11,4 @@ sonar.test.inclusions=**/*.test.tsx
 sonar.sourceEncoding=UTF-8
 
 sonar.inclusions=src/LandingPage.tsx
-sonar.coverage.exclusions=
+sonar.coverage.exclusions=**/*.css,**/*.html,**/*.js,**/*.ts,**/*.json,**/*.md
