--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,10 +5,10 @@ sonar.projectName=sqsProjekt
 sonar.projectVersion=1.0
 
 sonar.sources=src
-sonar.tests=src
+sonar.tests=src/tests
 sonar.test.inclusions=src/tests/LandingPage.test.tsx
 
 sonar.sourceEncoding=UTF-8
 
-sonar.inclusions=src/LandingPage.tsx
+sonar.inclusions=src/LandingPage.test.tsx
 sonar.coverage.exclusions=**/*.css,**/*.html,**/*.js,**/*.ts,**/*.json,**/*.md
