--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -170,3 +170,8 @@ jobs:
         run: |
           cd playwright
           npx playwright test --config playwright.config.js
+
+      - name: Show Test Results
+        run: echo "${{ steps.playwright.outputs.results }}" > test-results.json
+
+
